@@ -27,6 +27,12 @@ will eventually time out.  In my experience, threads hanging due to a
 partial socket read is reasonably rare, so I'm not overly worried
 about hanging disconnect threads clogging up the server.
 
+2. [SERVER, ADMIN CONSOLE] Added support for memory status tracking
+
+The server and admin console now collaborate to display the amount of
+memory free and the total amount of memory size of the server, to be
+updated once a minute by a new Memory Status Updater task.
+
 -------------------- Changes from 0.99.9 to 1.0pre1 -------------------
 
 RELEASE DATE: January 30, 2001
